[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calculatormb"
version = "0.0.2"
authors = [
  { name="Mazvydas Brikas", email="m_brikas@yahoo.com" },
]
description = "Calculator Package The Calculator Package is a Python module that provides a simple calculator class with essential arithmetic operations. This package allows users to perform addition, subtraction, multiplication, division, taking roots, and resetting the calculator's memory."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"